--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Dimetrodon</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
   <article>
     <img src="images/dimetrodon.svg" alt="#">
-    <p>Dimetrodon</p>
+    <h2>Dimetrodon</h2>
     <p>Often mistaken for a dinosaur but went extinct 40 M years before dinosaurs.</p>
   </article>
 
