--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
 
-  <article>
-    <img src="images/dimetrodon.svg" alt="#">
-    <h2>Dimetrodon</h2>
-    <p>Often mistaken for a dinosaur but went extinct 40 M years before dinosaurs.</p>
-  </article>
+
+  <div>
+    <img class="img-flex" src="images/dimetrodon.svg" alt="#">
+    <div class="text">
+      <h2>Dimetrodon</h2>
+      <p>Often mistaken for a dinosaur but went extinct 40 M years before dinosaurs.</p>
+    </div>
+  </div>
 
 </body>
 </html>
