Fix the settings of the 320 screen

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
 
-  <div>
+  <figure>
     <img class="img-flex" src="images/dimetrodon.svg" alt="#">
-    <div class="text">
+    <figcaption>
       <h2>Dimetrodon</h2>
       <p>Often mistaken for a dinosaur but went extinct 40 M years before dinosaurs.</p>
-    </div>
-  </div>
+    </figcaption>
+  </figure>
 
 </body>
 </html>
